welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: reassignment to val
    if (day=0 || day=6){
           ^alarmClock:9: error: reassignment to val
    if (day=0 || day=6){
           ^